Fix Work Wrap 3

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -46,7 +46,7 @@ body
   	background-color: #cccccc;
   	margin: 20px 0 20px 0;
  	color: #222222;
-	word-break:break-all;
+	word-break: break-word;
 } 
 
 .comment a 
